--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <h2>Other</h2>
 <ul>
     <li><a href="./hobbies.html">My Hobbies</a></li>
-    <li><a href="./contact.html">About Me</a></li>
+    <li><a href="./contact.html">contact Me</a></li>
 </ul>
 <footer>© Tamilarasan. All rights reserved.</footer>
 
